@@ -28,6 +28,8 @@ For a more comprehensive changelog of the latest experimental code, see:
  Tinsel:
    - Fix loading Discworld 1 savegames from the launcher where Rincewind had a held item
    - Script patch for hang in Discworld 1 GRA using items on Temple big hammer
+   - In Discworld 1, Held items being released that were never in the Luggage or Rincewind's inventory
+     will now be automatically dropped into the Luggage rather than being lost
 
  Tucker:
    - Fixed multiple graphic issues in Bud Tucker in Double Trouble.
